# gamepad-on-steam-on

./: Cargo.toml  Justfile  README.md
.github/workflows/: release.yml
src/: device.rs  events.rs  main.rs  steam.rs  util.rs  win.rs
wix/: License.rtf  main.wxs
